<resources>
    <string name="app_name">CheckMate</string>
    <string name="settings">Settings</string>
    <string name="force_dark_mode">Force dark mode</string>
    <string name="language">Language</string>
    <string name="clear_all_tasks">Clear all tasks</string>
    <string name="select_language">Select language</string>
    <string name="cancel">Cancel</string>
    <string name="dark_mode_icon">Dark mode icon</string>
    <string name="language_icon">Language icon</string>
    <string name="clear_all_tasks_icon">Clear all tasks icon</string>
    <string name="task_to_be_added">Task to be added</string>
    <string name="check_icon">Check icon</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="confirm">Confirm</string>
    <string name="clear_all_tasks_confirmation">Are you sure you want to delete all tasks? This action cannot be undone.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string-array name="languages">
        <item>Português</item>
        <item>English</item>
    </string-array>
    <string-array name="language_codes">
        <item>pt</item>
        <item>en</item>
    </string-array>
</resources>